--- a/Pokedex/src/App.css
+++ b/Pokedex/src/App.css
@@ -21,3 +21,18 @@ body {
   color: var(--text-color);
   font-family: var(--font-family);
 }
+
+.app {
+  display: grid;
+ grid-template-rows: auto 1fr;
+ min-height: 100vh ;
+}
+
+.app main {
+  padding: 1rem;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
