--- a/Pokedex/src/components/footer.module.css
+++ b/Pokedex/src/components/footer.module.css
@@ -5,7 +5,7 @@
     padding: 20px;
     display: flex;
     justify-content: space-around;
-    position: fixed;
+    position: relative;
     /* 
      /* Distribuir los elementos horizontalmente */
     align-items: center; /* Centrar verticalmente */
