--- a/Pokedex/src/pages/pokemons.module.css
+++ b/Pokedex/src/pages/pokemons.module.css
@@ -23,6 +23,7 @@
     justify-content: center;
     gap: 1rem;
     padding: 1rem;
+ 
   }
   /* Estiliza los enlaces de manera más llamativa */
   .link {
@@ -31,7 +32,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    background-color: red;
+    background-image:
+      linear-gradient(
+        red, #f06d06
+      );
     border-radius: 8px;
     padding: 1rem;
     transition: transform 0.2s ease-in-out;
