--- a/Pokedex/src/pages/pokemons.module.css
+++ b/Pokedex/src/pages/pokemons.module.css
@@ -61,4 +61,16 @@
   .link span {
     font-weight: bold;
   }
+
+  .loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+    margin: auto;
+  }
+  
+ 
   
